# rengine-ng

./: .env-dist  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  default_yaml_config.yaml  docker-compose.dev.yml  docker-compose.yml  install.sh  make.bat  test_race_condition_fix.py  update.sh
.github/: CONTRIBUTING.md  release.yml
.github/ISSUE_TEMPLATE/: ci.yml
.github/workflows/: auto-comment.yml  build.yml  close-issues-on-pr-merge-to-release-branch.yml  codeql-analysis.yml  delete-untagged-images.yml  release.yml  ruff.yml
docker/: Dockerfile  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.setup.yml  docker-compose.yml
docker/beat/: entrypoint-dev.sh  entrypoint.sh
docker/celery/: Dockerfile  entrypoint-dev.sh  entrypoint.sh  eyewitness-pyproject.toml  pyproject.toml
docker/certs/: Dockerfile  entrypoint.sh
docker/ollama/: Dockerfile  amd.Dockerfile  nvidia.Dockerfile
docker/postgres/: Dockerfile
docker/proxy/: Dockerfile
docker/proxy/config/: rengine.conf
docker/redis/: Dockerfile
docker/web/: .pre-commit-config.yaml  Dockerfile  entrypoint-dev.sh  entrypoint.sh  pyproject.toml
scripts/: common_functions.sh  gpu_support.sh  run_tests.sh  uninstall.sh  update.sh  update_default_engines.sh
tests/: test_makefile.py
web/: Dockerfile  beat-entrypoint-dev.sh  celery-entrypoint-dev.sh  celery-entrypoint.sh  debugger_setup.py  entrypoint-dev.sh  manage.py  requirements.txt
web/api/: consumers.py  serializers.py  urls.py  views.py  ws_urls.py
web/api/tests/: __init__.py  test_endpoint.py  test_ip.py  test_organization.py  test_osint.py  test_project.py  test_scan.py  test_search.py  test_subdomain.py  test_target.py  test_tools.py  test_views.py  test_vulnerability.py
web/art/: reNgine.txt
web/commonFilters/: apps.py
web/commonFilters/templatetags/: custom_filters.py
web/config/: default_yaml_config.yaml
web/config/default_scan_engines/: Initial Scan - Passive (import subdomains).yaml  Initial Scan - Passive with screenshots (common ports).yaml  Initial Scan - Passive with screenshots.yaml  Initial Scan - reNgine recommended.yaml  README.md  Scan - Active (common ports).yaml  Scan - Active (common-uncommon ports).yaml  Scan - Active (import subdomains - common ports).yaml  Scan - Active.yaml  Subscan - Fetch URLs.yaml  Subscan - File fuzzing.yaml  Subscan - Port scan.yaml  Subscan - Screenshots.yaml  Subscan - Vulnerabilities.yaml  Subscan - WAF Detection.yaml
web/dashboard/: admin.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
web/dashboard/fixtures/: dashboard.json
web/dashboard/migrations/: 0001_initial.py  0002_rename_name_searchhistory_query.py  0003_projects.py  0004_rename_projects_project.py  0005_alter_project_slug.py  0006_project_insert_date.py  0007_netlasapikey_openaiapikey.py  0007_openaikeys.py  0008_merge_0007_netlasapikey_openaiapikey_0007_openaikeys.py  0009_delete_openaikeys.py  0010_ollamasettings.py  0011_ollamasettings_is_ollama.py  0012_rename_is_ollama_ollamasettings_is_openai.py  0013_auto_20240421_0507.py  0014_rename_is_ollama_ollamasettings_use_ollama.py  0015_project_users.py  0016_project_description.py
web/dashboard/tests/: __init__.py  test_dashboard.py
web/fixtures/: auth.json  contenttypes.json  default_scan_engines.yaml  django_celery_beat.json  external_tools.yaml
web/fixtures/backup/: default_scan_engines.yaml
web/reNgine/: asgi.py  celery.py  celery_custom_task.py  common_func.py  common_serializers.py  common_views.py  context_processors.py  definitions.py  exceptions.py  gpt.py  init.py  llm.py  roles.py  routing.py  settings.py  tasks.py  urls.py  utilities.py  validators.py  wsgi.py
web/reNgine/llm/: config.py  generator.py  llm.py  utils.py  validators.py
web/reNgine/tasks/: __init__.py  (+16 more)
web/recon_note/: admin.py  apps.py  models.py  urls.py  views.py
web/scanEngine/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
web/startScan/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
web/targetApp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
web/tests/: test_llm.py  test_nmap.py  test_path_utilities.py  test_save_fuzzing_file.py  test_scan.py
web/utils/: test_base.py  test_utils.py
(+266 files in other folders)
